[gd_scene load_steps=24 format=3 uid="uid://o8dp7j6fxjhp"]

[ext_resource type="Script" path="res://scripts/build_scene.gd" id="1_2b11n"]
[ext_resource type="Texture2D" uid="uid://dkn0dp7cnmc3d" path="res://sprites/bg.png" id="2_1elwy"]
[ext_resource type="Texture2D" uid="uid://cclt0up3nbif2" path="res://sprites/speech-assembly-sketch.png" id="2_efu6d"]
[ext_resource type="Texture2D" uid="uid://c3ua88sal7kvc" path="res://sprites/creature_viewport.png" id="3_yyw1m"]
[ext_resource type="Texture2D" uid="uid://dgxdu6mmp4afx" path="res://sprites/empty-mouth.png" id="4_a5ed8"]
[ext_resource type="PackedScene" uid="uid://d2qyyctn7xjl8" path="res://scenes/mouth.tscn" id="5_nb0vn"]
[ext_resource type="Texture2D" uid="uid://ck0t3eosen2jn" path="res://sprites/a-e-i-LARGE.png" id="5_qmwkh"]
[ext_resource type="Texture2D" uid="uid://bxlnlqbn766dv" path="res://sprites/ok-button.png" id="8_1r0h1"]
[ext_resource type="Texture2D" uid="uid://do5qrquopwv7e" path="res://sprites/arrow-button.png" id="9_bpilg"]
[ext_resource type="Texture2D" uid="uid://d2akp3o0hk86v" path="res://sprites/unplug.png" id="9_tukae"]
[ext_resource type="Texture2D" uid="uid://dj40tsvsya2mn" path="res://sprites/word-display.png" id="10_t477v"]
[ext_resource type="Texture2D" uid="uid://cfil52isrxdg5" path="res://sprites/toolbox-arrow.png" id="11_x8sne"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8tvbn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yyw1m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_dssmm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_a5ed8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_qmwkh")
}],
"loop": true,
"name": &"syllables",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_do33c"]
size = Vector2(600, 490)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8cvbu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6kouv"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_e0lv0"]
pause = true
frame_0/texture = ExtResource("8_1r0h1")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1mah8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ij2ie"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2hfnw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqkv1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_moay8"]

[node name="Build Scene" type="Node2D" node_paths=PackedStringArray("viewportMouth")]
script = ExtResource("1_2b11n")
viewportMouth = NodePath("Creature Viewport/Mouth Align/Viewport Mouth")

[node name="Background Image" type="Sprite2D" parent="."]
texture = ExtResource("2_1elwy")
centered = false

[node name="Reference Image" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_efu6d")
centered = false

[node name="Creature Viewport" type="AnimatedSprite2D" parent="."]
position = Vector2(36, 35)
sprite_frames = SubResource("SpriteFrames_8tvbn")
centered = false

[node name="Mouth Align" type="Marker2D" parent="Creature Viewport"]
position = Vector2(172, 112)

[node name="Viewport Mouth" type="AnimatedSprite2D" parent="Creature Viewport/Mouth Align"]
sprite_frames = SubResource("SpriteFrames_dssmm")
offset = Vector2(128, 128)

[node name="Area2D" type="Area2D" parent="Creature Viewport"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Creature Viewport/Area2D"]
visible = false
position = Vector2(300, 235)
shape = SubResource("RectangleShape2D_do33c")

[node name="Word Select" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Buttons" type="Control" parent="Word Select"]
anchors_preset = 0
offset_left = 10.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 25.0

[node name="Okay Button" type="Button" parent="Word Select/Buttons"]
layout_mode = 0
offset_left = 870.0
offset_top = 383.0
offset_right = 1028.0
offset_bottom = 541.0
theme_override_constants/outline_size = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_8cvbu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6kouv")
icon = SubResource("AnimatedTexture_e0lv0")
flat = true

[node name="Arrows" type="Control" parent="Word Select/Buttons"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Left Word Arrow" type="Button" parent="Word Select/Buttons/Arrows"]
layout_mode = 0
offset_left = 648.0
offset_top = 396.0
offset_right = 846.0
offset_bottom = 524.0
theme_override_styles/pressed = SubResource("StyleBoxFlat_1mah8")
icon = ExtResource("9_bpilg")
flat = true

[node name="Right Word Arrow" type="Button" parent="Word Select/Buttons/Arrows"]
layout_mode = 0
offset_left = 1243.0
offset_top = 523.0
offset_right = 1441.0
offset_bottom = 651.0
scale = Vector2(-1, -1)
theme_override_styles/pressed = SubResource("StyleBoxFlat_ij2ie")
icon = ExtResource("9_bpilg")
flat = true

[node name="Unplug Button" type="Button" parent="Word Select/Buttons"]
layout_mode = 0
offset_left = 769.0
offset_top = 582.0
offset_right = 1207.0
offset_bottom = 692.0
theme_override_styles/pressed = SubResource("StyleBoxFlat_2hfnw")
icon = ExtResource("9_tukae")
flat = true

[node name="Word Window Reference" type="Sprite2D" parent="Word Select"]
position = Vector2(968, 192)
texture = ExtResource("10_t477v")

[node name="Inventory" type="Node2D" parent="."]

[node name="Left Inventory Arrow" type="Button" parent="Inventory"]
offset_left = 32.0
offset_top = 570.0
offset_right = 140.0
offset_bottom = 678.0
theme_override_styles/pressed = SubResource("StyleBoxFlat_qqkv1")
icon = ExtResource("11_x8sne")
flat = true

[node name="Right Inventory Arrow" type="Button" parent="Inventory"]
offset_left = 690.0
offset_top = 678.0
offset_right = 798.0
offset_bottom = 786.0
scale = Vector2(-1, -1)
theme_override_styles/pressed = SubResource("StyleBoxFlat_moay8")
icon = ExtResource("11_x8sne")
flat = true

[node name="Mouth" parent="Inventory" node_paths=PackedStringArray("homePosition") instance=ExtResource("5_nb0vn")]
position = Vector2(254, 623)
homePosition = NodePath("../Marker2D")

[node name="Mouth2" parent="Inventory" node_paths=PackedStringArray("homePosition") instance=ExtResource("5_nb0vn")]
position = Vector2(457, 625)
homePosition = NodePath("../Marker2D2")

[node name="Marker2D" type="Marker2D" parent="Inventory"]
position = Vector2(257, 625)

[node name="Marker2D2" type="Marker2D" parent="Inventory"]
position = Vector2(461, 633)

[connection signal="mouse_entered" from="Creature Viewport/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Creature Viewport/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="button_up" from="Word Select/Buttons/Okay Button" to="." method="_on_okay_button_button_up"]
[connection signal="button_up" from="Word Select/Buttons/Arrows/Left Word Arrow" to="." method="_on_left_word_arrow_button_up"]
[connection signal="button_up" from="Word Select/Buttons/Arrows/Right Word Arrow" to="." method="_on_right_word_arrow_button_up"]
[connection signal="button_up" from="Word Select/Buttons/Unplug Button" to="." method="_on_unplug_button_button_up"]
[connection signal="button_up" from="Inventory/Left Inventory Arrow" to="." method="_on_left_inventory_arrow_button_up"]
[connection signal="button_up" from="Inventory/Right Inventory Arrow" to="." method="_on_right_inventory_arrow_button_up"]
[connection signal="beingHeld" from="Inventory/Mouth" to="." method="_on_mouth_being_held"]
[connection signal="beingHeld" from="Inventory/Mouth2" to="." method="_on_mouth_being_held"]
